--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme"
         android:name=".application.CakeApp"
         >
-        <activity android:name=".MainActivity">
+        <activity android:name=".Modules.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
